; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btu/extr_btu_hcif.c_btu_hcif_mode_change_evt.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btu/extr_btu_hcif.c_btu_hcif_mode_change_evt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @btu_hcif_mode_change_evt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btu_hcif_mode_change_evt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @STREAM_TO_UINT8(i32 %7, i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @STREAM_TO_UINT16(i32 %10, i32* %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @STREAM_TO_UINT8(i32 %13, i32* %14)
  %16 = load i32, i32* %6, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @STREAM_TO_UINT16(i32 %16, i32* %17)
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @btm_sco_chk_pend_unpark(i32 %19, i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @btm_pm_proc_mode_change(i32 %22, i32 %23, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @STREAM_TO_UINT8(i32, i32*) #1

declare dso_local i32 @STREAM_TO_UINT16(i32, i32*) #1

declare dso_local i32 @btm_sco_chk_pend_unpark(i32, i32) #1

declare dso_local i32 @btm_pm_proc_mode_change(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
